--- a/Index.html
+++ b/Index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY NOTES</title>
-    <link rel="shortcut icon" href="IMG/MyNote.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="MyNote.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e03132f655.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!-- header -->
@@ -34,6 +34,6 @@
         <div class="msg">"Seek not to know who said this or that, but take note of what has been said"😊😊😊....</div>
     <!-- footer -->
         <footer><h2>~A.R.S</h2></footer>
-    <script src="js/app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
