--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY NOTES</title>
-    <link rel="shortcut icon" href="MyNote.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="/MyNote.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e03132f655.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
